chore: add aws-lambda dependency to package.json and package-lock.json

--- a/packages/puppeteer-sls/sls/package.json
+++ b/packages/puppeteer-sls/sls/package.json
@@ -19,6 +19,7 @@
     "@microfox/crypto-sdk": "^1.0.3",
     "@microfox/puppeteer-sls": "^1.2.2",
     "@microfox/tool-core": "latest",
+    "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
