--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -43,11 +43,11 @@ jobs:
       #   run: |
       #     echo "📝 Checking for docs changes..."
       #     echo "Comparing: $GITHUB_BEFORE → $GITHUB_AFTER"
-          
+
       #     # Run the script - it will handle git comparison internally
       #     cd scripts
       #     npm run update:constructors
-          
+
       #     # Check if any package-info.json files were modified
       #     echo "🐛 Current directory: $(pwd)"
       #     echo "🐛 Root directory contents:"
@@ -59,7 +59,7 @@ jobs:
       #     cd ..
       #     pwd
       #     git status --porcelain packages/*/package-info.json || echo "No files found with packages/ pattern"
-          
+
       #     if [ -z "$(git status --porcelain packages/*/package-info.json)" ]; then
       #       echo "no_changes=true" >> $GITHUB_OUTPUT
       #       echo "ℹ️ No package-info.json changes needed"
@@ -89,15 +89,15 @@ jobs:
       #     git fetch origin
       #     git reset --hard origin/${{ github.ref_name }}
 
-      # # 7) Index package info in database
-      # - name: Index updated package info
-      #   env:
-      #     SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      #     SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-      #   run: |
-      #     echo "🔍 Indexing package info in database..."
-      #     cd scripts
-      #     npm run save:package-info
+      # 7) Index package info in database
+      - name: Index updated package info
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+        run: |
+          echo "🔍 Indexing package info in database..."
+          cd scripts
+          npm run save:package-info
 
       # 8) Index docs in database
       - name: Index docs
@@ -115,4 +115,4 @@ jobs:
         run: |
           echo "✅ Workflow completed!"
           echo "🔍 Indexed package info in database"
-          echo "📖 Indexed docs in database" 
+          echo "📖 Indexed docs in database"
