chore: update package.json and package-lock.json to specify puppeteer-core version and ensure proper inclusion in serverless configuration

--- a/packages/puppeteer-sls/sls/serverless.yml
+++ b/packages/puppeteer-sls/sls/serverless.yml
@@ -6,6 +6,7 @@ package:
     - src/**
     - node_modules/serverless-offline/**
     - node_modules/@sparticuz/chromium/**
+    - node_modules/@microfox/puppeteer-sls/node_modules/@sparticuz/chromium/**
   include:
     - 'openapi.json'
 
@@ -42,6 +43,7 @@ custom:
 functions:
   unifiedHandler:
     handler: dist/index.handler
+    timeout: 30 # 0.5 minutes
     events:
       - http:
           path: /{functionName}
