chore: include additional @sparticuz/chromium directory in serverless package configuration for improved deployment

--- a/packages/puppeteer-sls/sls/serverless.yml
+++ b/packages/puppeteer-sls/sls/serverless.yml
@@ -6,6 +6,7 @@ package:
     - src/**
     - node_modules/serverless-offline/**
     - node_modules/@sparticuz/chromium/**
+    - ./node_modules/@sparticuz/chromium/**
     - node_modules/@microfox/puppeteer-sls/node_modules/@sparticuz/chromium/**
   include:
     - 'openapi.json'
