chore: comment out layers configuration in serverless.yml to simplify deployment setup

--- a/packages/puppeteer-sls/sls/serverless.yml
+++ b/packages/puppeteer-sls/sls/serverless.yml
@@ -53,8 +53,8 @@ functions:
           path: /{functionName}
           method: any
           cors: true
-    layers:
-      - arn:aws:lambda:us-east-1:035837222000:layer:chromium-x86-135:1
+    # layers:
+    #   - arn:aws:lambda:us-east-1:035837222000:layer:chromium-x86-135:1
 
 resources:
   Outputs:
