--- a/packages/puppeteer-sls/sls/package.json
+++ b/packages/puppeteer-sls/sls/package.json
@@ -24,6 +24,7 @@
     "puppeteer-core": "^24.12.1"
   },
   "devDependencies": {
+    "@sparticuz/chromium": "^138.0.1",
     "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
