--- a/packages/puppeteer-sls/package.json
+++ b/packages/puppeteer-sls/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@microfox/s3-space": "*",
     "@mozilla/readability": "^0.5.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "turndown": "^7.2.0"
   },
   "peerDependencies": {
