chore: increase memory size for serverless function to 2048 MB

--- a/packages/puppeteer-sls/sls/serverless.yml
+++ b/packages/puppeteer-sls/sls/serverless.yml
@@ -18,6 +18,7 @@ provider:
   stage: ${opt:stage, env:ENVIRONMENT, 'dev'}
   environment: ${file(env.json)}
   timeout: 300 # 5 minutes
+  memorySize: 2048
 
 custom:
   stage: ${env:ENVIRONMENT, 'dev'}
