--- a/packages/tool-core/package.json
+++ b/packages/tool-core/package.json
@@ -27,11 +27,14 @@
   },
   "dependencies": {
     "@microfox/crypto-sdk": "^1.2.0",
+    "@microfox/db-upstash": "^1.1.4",
+    "@upstash/redis": "^1.31.6",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.142",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
