--- a/packages/puppeteer-sls/sls/package.json
+++ b/packages/puppeteer-sls/sls/package.json
@@ -17,8 +17,9 @@
     "lint": "eslint  --ignore-pattern 'dist/**'"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.614.0",
     "@microfox/puppeteer-sls": "^1.2.6",
-    "@microfox/tool-core": "latest",
+    "@microfox/tool-core": "^1.0.6",
     "@types/aws-lambda": "^8.10.150",
     "dotenv": "^16.4.5",
     "puppeteer-core": "^24.12.1"
