--- a/packages/puppeteer-sls/sls/serverless.yml
+++ b/packages/puppeteer-sls/sls/serverless.yml
@@ -17,8 +17,14 @@ provider:
   region: us-east-1
   stage: ${opt:stage, env:ENVIRONMENT, 'dev'}
   environment: ${file(env.json)}
-  timeout: 300 # 5 minutes
-  memorySize: 2048
+  iam:
+    role:
+      statements:
+        - Effect: "Allow"
+          Action:
+            - "sqs:SendMessage"
+          Resource:
+            - "Fn::GetAtt": [ "PuppeteerQueue", "Arn" ]
 
 custom:
   stage: ${env:ENVIRONMENT, 'dev'}
@@ -36,18 +42,32 @@ custom:
     environment: ${file(env.json)}
 
 functions:
-  unifiedHandler:
-    handler: dist/index.handler
-    timeout: 30 # 0.5 minutes
+  proxy:
+    handler: dist/proxy.handler
+    environment:
+      PUPPETEER_QUEUE_URL: { "Ref": "PuppeteerQueue" }
     events:
       - http:
           path: /{functionName}
           method: any
           cors: true
+  unifiedHandler:
+    handler: dist/index.handler
+    events:
+      - sqs:
+          arn:
+            Fn::GetAtt:
+              - PuppeteerQueue
+              - Arn
     layers:
       - arn:aws:lambda:us-east-1:035837222000:layer:chromium-x86-135:1
 
 resources:
+  Resources:
+    PuppeteerQueue:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: "puppeteer-queue-${self:provider.stage}"
   Outputs:
     ApiEndpoints:
       Description: 'API Endpoints'
@@ -58,4 +78,4 @@ resources:
             - Ref: 'ApiGatewayRestApi'
             - '.execute-api.'
             - Ref: 'AWS::Region'
-            - "/${env:ENVIRONMENT, 'dev'}"
+            - "/${self:provider.stage}"
