chore: add Upstash Redis environment variables for deployment

--- a/.github/workflows/deploy-sls.yml
+++ b/.github/workflows/deploy-sls.yml
@@ -32,6 +32,8 @@ jobs:
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          TASK_UPSTASH_REDIS_REST_URL: ${{ secrets.TASK_UPSTASH_REDIS_REST_URL }}
+          TASK_UPSTASH_REDIS_REST_TOKEN: ${{ secrets.TASK_UPSTASH_REDIS_REST_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_BEFORE: ${{ github.event.before }}
           GITHUB_AFTER: ${{ github.event.after }}
