--- a/packages/brave/sls/package.json
+++ b/packages/brave/sls/package.json
@@ -19,9 +19,11 @@
     "@microfox/brave": "^1.2.0",
     "@microfox/crypto-sdk": "^1.0.3",
     "@microfox/tool-core": "latest",
+    "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.150",
     "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
