--- a/packages/slack/package.json
+++ b/packages/slack/package.json
@@ -20,7 +20,8 @@
     "typescript": "5.6.3"
   },
   "dependencies": {
-    "@slack/web-api": "^7.9.3"
+    "@slack/web-api": "^7.9.3",
+    "dotenv": "^17.2.0"
   },
   "publishConfig": {
     "access": "public"
