--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@microfox/cli",
+  "name": "microfox",
   "version": "1.0.10",
   "description": "Universal CLI tool for creating modern TypeScript packages with npm availability checking",
   "main": "./dist/index.js",
@@ -27,9 +27,10 @@
     }
   },
   "dependencies": {
+    "@microfox/slack": "^1.2.0",
     "@types/micromatch": "^4.0.9",
     "axios": "^1.10.0",
-    "chalk": "^5.4.1",
+    "chalk": "^5.3.0",
     "commander": "^14.0.0",
     "inquirer": "^12.7.0",
     "micromatch": "^4.0.8",
