--- a/packages/tool-kit/package.json
+++ b/packages/tool-kit/package.json
@@ -29,7 +29,7 @@
     "@ai-sdk/openai": "2.0.0-alpha.15",
     "@ai-sdk/ui-utils": "1.2.11",
     "@microfox/crypto-sdk": "^1.2.0",
-    "@microfox/types": "^1.0.5",
+    "@microfox/types": "*",
     "ai": "5.0.0-alpha.15",
     "zod": "^3.25.67"
   },
