--- a/packages/tool-core/package.json
+++ b/packages/tool-core/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@microfox/crypto-sdk": "^1.2.0",
     "@microfox/db-upstash": "^1.1.7",
-    "@microfox/types": "^1.0.5",
+    "@microfox/types": "*",
     "@upstash/redis": "^1.31.6",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5",
