chore: increase memory size to 2048 for serverless configuration in puppeteer-sls

--- a/packages/puppeteer-sls/sls/serverless.yml
+++ b/packages/puppeteer-sls/sls/serverless.yml
@@ -17,6 +17,7 @@ provider:
   region: us-east-1
   stage: ${opt:stage, env:ENVIRONMENT, 'dev'}
   environment: ${file(env.json)}
+  memorySize: 2048
   iam:
     role:
       statements:
