--- a/packages/puppeteer-sls/sls/package.json
+++ b/packages/puppeteer-sls/sls/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.614.0",
     "@microfox/puppeteer-sls": "^1.2.6",
-    "@microfox/tool-core": "^1.0.13",
+    "@microfox/tool-core": "latest",
     "@types/aws-lambda": "^8.10.150",
     "dotenv": "^16.4.5",
     "puppeteer-core": "^24.12.1"
