--- a/packages/oauth-kit/package.json
+++ b/packages/oauth-kit/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@microfox/slack-oauth": "^1.2.0",
     "@microfox/google-oauth": "^1.2.0",
+    "@microfox/github-oauth": "^1.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
