--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,13 +32,16 @@
     "chalk": "^5.3.0",
     "commander": "^14.0.0",
     "inquirer": "^12.7.0",
+    "js-yaml": "^4.1.0",
     "micromatch": "^4.0.8",
     "readline-sync": "^1.4.10",
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@microfox/tracker": "*",
     "@microfox/tsconfig": "*",
     "@types/inquirer": "^9.0.8",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.0.8",
     "@types/readline-sync": "^1.4.8",
     "tsup": "^8",
