--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.10.0",
     "chalk": "^5.3.0",
     "commander": "^14.0.0",
+    "find-up": "^7.0.0",
     "inquirer": "^12.7.0",
     "js-yaml": "^4.1.0",
     "micromatch": "^4.0.8",
