--- a/packages/brave/sls/package.json
+++ b/packages/brave/sls/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@microfox/brave": "^1.2.0",
     "@microfox/crypto-sdk": "^1.0.3",
-    "@microfox/tool-core": "latest",
+    "@microfox/tool-core": "^1.0.16",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5"
   },
