--- a/packages/tracker/example/package.json
+++ b/packages/tracker/example/package.json
@@ -2,7 +2,7 @@
   "name": "test-project-ai-client",
   "version": "1.0.0",
   "devDependencies": {
-    "@microfox/tracker": "^1.0.3",
+    "@microfox/tracker": "*",
     "@types/node": "^24.1.0",
     "typescript": "^5.8.3"
   },
