--- a/packages/whatsapp-oauth/package.json
+++ b/packages/whatsapp-oauth/package.json
@@ -5,7 +5,10 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist/**", "CHANGELOG.md"],
+  "files": [
+    "dist/**",
+    "CHANGELOG.md"
+  ],
   "scripts": {
     "build": "tsup",
     "build:watch": "tsup --watch",
@@ -23,6 +26,8 @@
     }
   },
   "dependencies": {
+    "@microfox/db-upstash": "latest",
+    "@upstash/redis": "^1.35.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -42,5 +47,10 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["whatsapp-oauth", "typescript", "api", "sdk"]
+  "keywords": [
+    "whatsapp-oauth",
+    "typescript",
+    "api",
+    "sdk"
+  ]
 }
