--- a/packages/aws-ses/package.json
+++ b/packages/aws-ses/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@microfox/usage-tracker": "*",
-    "@microfox/rest-sdk": "*",
+    "@microfox/rest-sdk": "1.2.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
