--- a/packages/fontuse/package.json
+++ b/packages/fontuse/package.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
+    "@microfox/db-upstash": "^1.1.8",
     "@microfox/rag-upstash": "^1.1.2",
     "@upstash/redis": "^1.35.2",
     "zod": "^3.24.3"
