--- a/packages/instagram/package.json
+++ b/packages/instagram/package.json
@@ -24,7 +24,7 @@
     }
   },
   "dependencies": {
-    "@microfox/instagram-business-oauth": "^1.2.0",
+    "@microfox/instagram-oauth": "*",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -51,7 +51,6 @@
     "instagram",
     "graph api",
     "typescript",
-    "oauth2",
     "microfox",
     "sdk"
   ]
