--- a/packages/instagramFb-oauth/package.json
+++ b/packages/instagramFb-oauth/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@microfox/instagramFb-oauth",
-  "version": "1.0.1",
-  "description": "A robust TypeScript SDK for instagramFb OAuth 2.0 authentication and API integration",
+  "name": "@microfox/instagramfb-oauth",
+  "version": "1.0.0",
+  "description": "A robust TypeScript SDK for instagramfb OAuth 2.0 authentication and API integration",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -52,7 +52,7 @@
     "oauth",
     "sdk",
     "typescript",
-    "instagramFb",
+    "instagramfb",
     "facebook"
   ],
   "author": "TheMoonDevs",
