--- a/packages/instagramFb/package.json
+++ b/packages/instagramFb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@microfox/instagramFb",
+  "name": "@microfox/instagramfb",
   "version": "1.3.1",
   "description": "A TypeScript SDK for interacting with the Instagram API using OAuth 2.0.  This package simplifies authentication and data access.",
   "main": "./dist/index.js",
@@ -24,7 +24,7 @@
     }
   },
   "dependencies": {
-    "@microfox/instagramFb-oauth": "*",
+    "@microfox/instagramfb-oauth": "*",
     "zod": "^3.24.3"
   },
   "devDependencies": {
