--- a/packages/instagram/package.json
+++ b/packages/instagram/package.json
@@ -14,7 +14,10 @@
     "build:watch": "tsup --watch",
     "clean": "rm -rf dist",
     "lint": "eslint \"./**/*.ts*\"",
-    "prettier-check": "prettier --check \"./**/*.ts*\""
+    "prettier-check": "prettier --check \"./**/*.ts*\"",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -25,13 +28,16 @@
   },
   "dependencies": {
     "@microfox/instagram-oauth": "*",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "dotenv": "^16.4.0"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
     "@types/node": "^18",
     "tsup": "^8",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vitest": "^2.0.0",
+    "@vitest/coverage-v8": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
