--- a/packages/remotion/package.json
+++ b/packages/remotion/package.json
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "@remotion/google-fonts": "^4.0.340",
+    "@remotion/google-fonts": "4.0.340",
     "@remotion/media-utils": "^4.0.340",
     "react": "19.1.1",
     "remotion": "4.0.340",
