chore: update dependencies and add new script for MP3 generation
- Added `ts-node` and `tsx` as dependencies in the Remotion example.
- Introduced a new script `generate:mp3` for generating MP3 files from MP4.
- Removed the `Waveform.mp4` file from the output directory.

--- a/examples/remotion/package.json
+++ b/examples/remotion/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "remotion": "remotion studio",
     "render": "remotion render",
-    "deploy": "node deploy.mjs"
+    "deploy": "node deploy.mjs",
+    "generate:mp3": "tsx scripts/generate-mp3-from-mp4.ts"
   },
   "dependencies": {
     "@microfox/remotion": "*",
@@ -41,6 +42,8 @@
     "eslint-config-next": "15.1.6",
     "prettier": "3.6.0",
     "tailwindcss": "^4.1.12",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "5.8.2"
   }
 }
