--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,7 +6,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "microfox": "./dist/cli.js"
+    "microfox": "./dist/cli.js",
+    "ai-studio-cli": "./dist/ai-studio-cli.js"
   },
   "files": [
     "dist/**/*",
@@ -31,6 +32,7 @@
     "axios": "^1.10.0",
     "chalk": "^5.3.0",
     "commander": "^14.0.0",
+    "execa": "^8.0.1",
     "find-up": "^7.0.0",
     "form-data": "^4.0.4",
     "inquirer": "^12.7.0",
