--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,6 +35,7 @@
     "execa": "^8.0.1",
     "find-up": "^7.0.0",
     "form-data": "^4.0.4",
+    "glob": "^10.4.5",
     "inquirer": "^12.7.0",
     "js-yaml": "^4.1.0",
     "micromatch": "^4.0.8",
@@ -51,6 +52,7 @@
     "@types/micromatch": "^4.0.9",
     "@types/node": "^24.0.8",
     "@types/readline-sync": "^1.4.8",
+    "@types/tar": "^6.1.13",
     "tsup": "^8",
     "typescript": "5.8.3"
   },
