chore: update zod dependency to version ^4.1.11 across all packages

--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@microfox/usage-tracker": "*",
     "ai": "latest",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
