--- a/packages/reddit/package.json
+++ b/packages/reddit/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@microfox/reddit-oauth": "*",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
