--- a/packages/agent-kit/package.json
+++ b/packages/agent-kit/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@microfox/webhook-slack": "*",
     "aws-lambda": "^1.0.7",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "peerDependencies": {
     "next": ">=13.0.0"
