--- a/packages/aws-ses/package.json
+++ b/packages/aws-ses/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@microfox/usage-tracker": "*",
     "@microfox/rest-sdk": "1.2.1",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
