--- a/packages/fontuse/package.json
+++ b/packages/fontuse/package.json
@@ -29,7 +29,7 @@
     "@microfox/db-upstash": "^1.1.8",
     "@microfox/rag-upstash": "^1.1.2",
     "@upstash/redis": "^1.35.2",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "latest",
