--- a/packages/google-sheets/package.json
+++ b/packages/google-sheets/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@microfox/google-oauth": "^1.2.0",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
