--- a/packages/google/package.json
+++ b/packages/google/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@microfox/rest-sdk": "1.2.1",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
