--- a/packages/instagramfb/package.json
+++ b/packages/instagramfb/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@microfox/instagramfb-oauth": "*",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
