--- a/packages/oauth-kit/package.json
+++ b/packages/oauth-kit/package.json
@@ -27,7 +27,7 @@
     "@microfox/slack-oauth": "^1.2.0",
     "@microfox/google-oauth": "^1.2.0",
     "@microfox/github-oauth": "^1.0.2",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
