--- a/packages/puppeteer-suno/package.json
+++ b/packages/puppeteer-suno/package.json
@@ -25,7 +25,7 @@
     }
   },
   "dependencies": {
-    "zod": "4.0.5",
+    "zod": "^4.1.11",
     "@microfox/puppeteer-sls": "1.2.10",
     "puppeteer-core": "24.10.2"
   },
