--- a/packages/rag-upstash/package.json
+++ b/packages/rag-upstash/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@upstash/vector": "^1.2.2",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^18",
