--- a/packages/remotion-render-lambda/package.json
+++ b/packages/remotion-render-lambda/package.json
@@ -23,7 +23,7 @@
     }
   },
   "dependencies": {
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "latest",
