--- a/packages/rest-sdk/package.json
+++ b/packages/rest-sdk/package.json
@@ -25,7 +25,7 @@
     }
   },
   "dependencies": {
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
