--- a/packages/stdlib/package.json
+++ b/packages/stdlib/package.json
@@ -66,7 +66,7 @@
     "@microfox/wolfram-alpha": "*",
     "@microfox/zoominfo": "*",
     "@e2b/code-interpreter": "^1.0.2",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*"
