--- a/packages/suno-api/package.json
+++ b/packages/suno-api/package.json
@@ -27,7 +27,7 @@
     }
   },
   "dependencies": {
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
