--- a/packages/task-kit/package.json
+++ b/packages/task-kit/package.json
@@ -24,12 +24,12 @@
     }
   },
   "dependencies": {
-    "@microfox/ai-provider-google": "^1.3.0",
+    "@microfox/ai-provider-google": "latest",
     "@microfox/usage-tracker": "*",
     "@microfox/webhook-core": "*",
     "@supabase/supabase-js": "^2.50.0",
-    "ai": "latest",
-    "zod": "4.0.5"
+    "ai": "^5.0.5",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
