--- a/packages/tool-kit/package.json
+++ b/packages/tool-kit/package.json
@@ -31,7 +31,7 @@
     "@microfox/crypto-sdk": "^1.2.0",
     "@microfox/types": "*",
     "ai": "5.0.51",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
