--- a/packages/webhook-slack/package.json
+++ b/packages/webhook-slack/package.json
@@ -28,7 +28,7 @@
     "@slack/bolt": "^4.4.0",
     "@types/aws-lambda": "^8.10.149",
     "aws-lambda": "^1.0.7",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "peerDependencies": {
     "next": ">=13.0.0"
