--- a/packages/webhook-whatsapp/package.json
+++ b/packages/webhook-whatsapp/package.json
@@ -29,7 +29,7 @@
     "aws-lambda": "^1.0.7",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "peerDependencies": {
     "next": ">=13.0.0"
