--- a/packages/whatsapp-oauth/package.json
+++ b/packages/whatsapp-oauth/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@microfox/db-upstash": "latest",
     "@upstash/redis": "^1.35.2",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "latest",
