--- a/packages/youtube/package.json
+++ b/packages/youtube/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@microfox/google": "*",
     "@microfox/rest-sdk": "1.2.1",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
