--- a/packages/ai-provider-vertex/package.json
+++ b/packages/ai-provider-vertex/package.json
@@ -31,7 +31,7 @@
     "@microfox/usage-tracker": "*",
     "@upstash/redis": "^1.34.9",
     "ai": "5.0.51",
-    "zod": "4.0.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
