--- a/packages/ai-code/package.json
+++ b/packages/ai-code/package.json
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "zod": "4.0.5",
+    "zod": "^4.1.11",
     "ai": "5.0.51",
     "@ai-sdk/provider": "2.0.0",
     "@ai-sdk/google": "2.0.16",
