chore: add zod dependency to WhatsApp Business package

--- a/packages/whatsapp-business/package.json
+++ b/packages/whatsapp-business/package.json
@@ -53,5 +53,8 @@
   },
   "bugs": {
     "url": "https://github.com/microfox-ai/microfox/issues"
+  },
+  "dependencies": {
+    "zod": "^4.1.11"
   }
 }
